tests/fail/different_type_if_else.py
# type declaration is different in if/else -> error
if 10 == 10:
    b = "10"
else:
    b = 20
